adding elemental instructions as test

--- a/pSeurat.ipynb
+++ b/pSeurat.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## instructions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You'll need something like:  \n",
+    "\n",
+    "png(file=\"filename.jpg\")\n",
+    "VlnPlot(object = pbmc, features.plot = c(\"nGene\", \"nUMI\", \"percent.mito\"), nCol = 3)\n",
+    "dev.off()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
